--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Archer Albrecht</title>
-  <link rel="stylesheet" href="src/css/index.css">
+  <link rel="stylesheet" href="src/css/shared.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/2172e4ad38.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
+  <!--<header>
     <nav>
       <a href="/">🏠</a>&nbsp;
       <a href="/abt">👨</a>&nbsp;
       <a href="/wrk">💼</a>&nbsp;
-      <a href="/gth">👨‍💻</a>&nbsp;
-      <a href="/yt">🎥</a>
+      <a href="https://github.com/ArchDud3/">👨‍💻</a>
     </nav>
   </header>
+  <main>
+    <div class="title"></div>
+  </main>-->
+
+  <h1 style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);">🐺 🎶 👁️‍🗨️</h1>
 </body>
 </html>
