index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <div class="title"></div>
   </main>-->
 
-  <h1 style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);">🐺 🎶 👁️‍🗨️</h1>
+    <h1 style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);">Guten Tag</h1>
 </body>
 </html>
